<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/txvReceiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_10dp"
        android:layout_marginTop="@dimen/margin_padding_20dp"
        android:text="@string/str_receiver"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@id/linearReceive"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearReceive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_5dp"
        android:layout_marginTop="@dimen/margin_padding_10dp"
        android:layout_marginEnd="@dimen/margin_padding_5dp"
        android:layout_marginBottom="@dimen/margin_padding_10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txvReceiver">

        <EditText
            android:id="@+id/edtReceiverId"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_3dp"
            android:layout_weight="4"
            android:hint="@string/hint_plz_receiver_id" />

        <Button
            android:id="@+id/btnCheckReceiverId"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_1dp"
            android:layout_weight="1"
            android:text="@string/str_check_id" />

    </LinearLayout>

    <TextView
        android:id="@+id/txvMessageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_10dp"
        android:text="@string/str_title"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@id/edtMessageTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearReceive" />

    <EditText
        android:id="@+id/edtMessageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_5dp"
        android:layout_marginEnd="@dimen/margin_padding_5dp"
        android:hint="@string/hint_plz_title"
        android:maxLength="50"
        app:layout_constraintBottom_toTopOf="@id/txvMessageContent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txvMessageTitle" />

    <TextView
        android:id="@+id/txvMessageContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_10dp"
        android:text="@string/str_content_label"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@id/edtMessageContent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtMessageTitle" />

    <EditText
        android:id="@+id/edtMessageContent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_200dp"
        android:layout_marginStart="@dimen/margin_padding_5dp"
        android:layout_marginTop="@dimen/margin_padding_10dp"
        android:layout_marginEnd="@dimen/margin_padding_5dp"
        android:layout_marginBottom="@dimen/margin_padding_5dp"
        android:hint="@string/hint_less_than_500"
        android:maxLength="500"
        android:gravity="start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txvMessageContent" />

    <Button
        android:id="@+id/btnLetterDlgSend"
        android:layout_width="@dimen/size_80dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_10dp"
        android:enabled="false"
        android:text="@string/str_send"
        app:layout_constraintRight_toLeftOf="@id/btnLetterDlgCancel"
        app:layout_constraintTop_toBottomOf="@id/edtMessageContent" />

    <Button
        android:id="@+id/btnLetterDlgCancel"
        android:layout_width="@dimen/size_80dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_10dp"
        android:text="@string/str_cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtMessageContent" />

</android.support.constraint.ConstraintLayout>