<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:focusable="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_20dp"
        android:layout_marginTop="@dimen/margin_padding_30dp"
        android:text="@string/str_change_category"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_20dp"
        android:textStyle="bold" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_20dp"
        android:layout_marginTop="@dimen/margin_padding_15dp"
        android:text="@string/str_text"
        android:textSize="@dimen/text_16dp"
        android:textStyle="bold" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_20dp"
        android:layout_marginTop="@dimen/margin_padding_6dp"
        android:text="@string/str_picture"
        android:textSize="@dimen/text_16dp"
        android:textStyle="bold" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_20dp"
        android:layout_marginTop="@dimen/margin_padding_6dp"
        android:text="@string/str_music"
        android:textSize="@dimen/text_16dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_2dp"
        android:layout_marginStart="@dimen/margin_padding_20dp"
        android:layout_marginTop="@dimen/margin_padding_20dp"
        android:layout_marginEnd="@dimen/margin_padding_20dp"
        android:layout_marginBottom="@dimen/margin_padding_20dp"
        android:background="@color/colorSimilarGrey" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_20dp"
        android:layout_marginBottom="@dimen/margin_padding_30dp"
        android:text="@string/str_change_banner_color"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_20dp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spnSkin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_20dp"
        android:entries="@array/color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end">

        <Button
            android:id="@+id/btnSaveMyPreference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_padding_10dp"
            android:layout_marginBottom="@dimen/margin_padding_10dp"
            android:text="@string/str_save"
            android:textSize="@dimen/text_15dp" />
    </LinearLayout>

</LinearLayout>