<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSimilarWhite"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0dp"
        android:layout_marginLeft="@dimen/margin_padding_10dp"
        android:layout_marginTop="@dimen/margin_padding_15dp"
        android:layout_marginRight="@dimen/margin_padding_10dp"
        android:layout_marginBottom="@dimen/margin_padding_7dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorBlackAlpha"
            android:gravity="center_vertical"
            android:text="@string/str_category"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_14dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/write_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@string/hint_plz_choice_category"
            android:entries="@array/category" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0dp"
        android:layout_marginStart="@dimen/margin_padding_10dp"
        android:layout_marginEnd="@dimen/margin_padding_10dp"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline1">

        <TextView
            android:id="@+id/tvWriteTitleLabel"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorBlackAlpha"
            android:gravity="center"
            android:text="@string/str_title_gap"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_15dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/title_edit"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="@dimen/size_0dp"
            android:layout_marginStart="@dimen/margin_padding_2dp"
            android:layout_marginEnd="@dimen/margin_padding_2dp"
            android:background="@color/colorWhite"
            android:hint="@string/hint_plz_title"
            android:maxLength="20"
            android:textColor="@color/colorBlue"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@+id/tvWriteTitleLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/script_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0dp"
        android:layout_marginStart="@dimen/margin_padding_10dp"
        android:layout_marginTop="@dimen/margin_padding_7dp"
        android:layout_marginEnd="@dimen/margin_padding_10dp"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/guideline2">

        <TextView
            android:id="@+id/explain_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorBlackAlpha"
            android:gravity="center"
            android:text="@string/str_content_gap"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_15dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/explain_edit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_padding_2dp"
            android:layout_marginEnd="@dimen/margin_padding_2dp"
            android:background="@color/colorWhite"
            android:hint="@string/hint_plz_content"
            android:maxLength="4000"
            android:textColor="@color/colorBlue"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@+id/explain_textview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0dp"
        android:layout_marginStart="@dimen/margin_padding_10dp"
        android:layout_marginTop="@dimen/margin_padding_7dp"
        android:layout_marginEnd="@dimen/margin_padding_10dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/guideline3">

        <TextView
            android:id="@+id/tvFile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorBlackAlpha"
            android:gravity="center_vertical"
            android:text="@string/str_upload_file"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_12dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/file_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_padding_5dp"
            android:enabled="false"
            android:gravity="center_vertical"
            android:text="@string/str_warning_text_upload"
            android:textSize="@dimen/text_12dp" />
    </LinearLayout>

    <Button
        android:id="@+id/done_button"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_0dp"
        android:layout_marginStart="@dimen/margin_padding_10dp"
        android:layout_marginTop="@dimen/margin_padding_8dp"
        android:layout_marginEnd="@dimen/margin_padding_10dp"
        android:background="@color/colorBlueAlpha"
        android:text="@string/str_upload_board"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/guideline5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.71" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

</android.support.constraint.ConstraintLayout>