<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_padding_5dp"
    android:background="@color/colorWhite"
    android:padding="@dimen/margin_padding_10dp">

    <TextView
        android:id="@+id/tvLetterRclId"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_test_id"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_18dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnLetterRclReply"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLetterRclTitle"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_test_title"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnLetterRclReply"
        app:layout_constraintTop_toBottomOf="@+id/tvLetterRclId" />

    <TextView
        android:id="@+id/tvLetterRclTime"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_test_date"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnLetterRclReply"
        app:layout_constraintTop_toBottomOf="@+id/tvLetterRclTitle" />

    <ImageView
        android:id="@+id/btnLetterRclDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_10dp"
        android:src="@drawable/ic_delete_black_40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnLetterRclReply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_10dp"
        android:src="@drawable/ic_reply_black_40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnLetterRclDelete"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLetterRclHiddenId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>